--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "better-sqlite3": "^11.6.0",
+    "@supabase/supabase-js": "^2.95.3",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.3.1",
     "express": "^4.21.0",
     "lucide-react": "^0.460.0",
     "multer": "^1.4.5-lts.1",
@@ -23,7 +24,6 @@
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.11",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.11",
