Enables login and admin

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,12 @@
 
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_KEY=your-service-role-key
+SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_STORAGE_BUCKET=calibration-records
+
+# Optional: comma-separated emails that become admin on first login (no hardcoding)
+ADMIN_EMAIL=your-email@example.com
+
+# Vite env (for client) - prefix with VITE_
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
